--- a/less/navigation.less
+++ b/less/navigation.less
@@ -5,6 +5,10 @@
 	padding-top: 13px;
 	border: 1px solid @sea-shell;
 	background-color: @wild-sand;
+	position: fixed;
+	overflow: hidden;
+	top: 0;
+	width: 100%;
 
 	h1 {
 		font-size: 4rem;
